Removing border-collapse used in .wrapper that's causing sizing issues

--- a/compiled/css/style.css
+++ b/compiled/css/style.css
@@ -18819,7 +18819,6 @@ ul.image-list li img {
   margin: 0;
   padding: 0;
   border: 0;
-  border-collapse: collapse;
 }
 .wrapper:before {
   content: "";
