--- a/src/css/less/livescore/rules/ls-wrapper.less
+++ b/src/css/less/livescore/rules/ls-wrapper.less
@@ -5,7 +5,6 @@
   margin: 0;
   padding: 0; 
   border: 0;
-  border-collapse: collapse; 
 
   &:before{
   	content: "";
